--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -2,7 +2,17 @@
 <title>{{ recipe.name}}</title>
 <h1>{{ recipe.name }}</h1>
 <h3>Ingredients</h3>
-<p>{{ recipe.ingredients }}</p>
+<ul>
+    {% for ingredient in recipe.ingredients %}
+    <li>{{ ingredient }}</li>
+    {% endfor %}
+</ul>
+<!-- <p>{{ recipe.ingredients }}</p> -->
 <h3>Instructions</h3>
-<p>{{ recipe.instructions }}</p>
+<!-- <p>{{ recipe.instructions }}</p> -->
+<ol>
+    {% for step in recipe.instructions %}
+    <li>{{ step }}</li>
+    {% endfor %}
+</ol>
 <a href={{recipe.url}}>{{ recipe.name }} on allrecipes.com</a>
