fixed broken url link

--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -15,4 +15,4 @@
     <li>{{ step }}</li>
     {% endfor %}
 </ol>
-<a href={{recipe.url}}>{{ recipe.name }} on allrecipes.com</a>
+<a href={{recipe.url}}>{{ recipe.name }} original recipe site</a>
